[package]
name = "aoc-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat = "0.3.2"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
rstest = "0.18.2"
valence_math = "0.2.0-alpha.1"

[features]
dhat-heap = []
